overflow fix

--- a/styles/Puslapis.module.scss
+++ b/styles/Puslapis.module.scss
@@ -7,6 +7,7 @@
 .container {
 	max-height: 100vh;
 	max-width: 100vw;
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	background-color: #000000;
